{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 13,
  "lineage": "44054af7-ab12-9b14-cf52-0e72f8ecdc94",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_ingress",
      "name": "air_ingress",
      "provider": "provider.kubernetes",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "air/air-ingress",
            "load_balancer_ingress": [],
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/rewrite-target": "/"
                },
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "air-ingress",
                "namespace": "air",
                "resource_version": "15502",
                "self_link": "/apis/extensions/v1beta1/namespaces/air/ingresses/air-ingress",
                "uid": "306174cc-3262-4803-8325-c3c2f8eeaced"
              }
            ],
            "spec": [
              {
                "backend": [],
                "rule": [
                  {
                    "host": "air-country.lunatest.nl",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "service_name": "air103-service",
                                "service_port": "8080"
                              }
                            ],
                            "path": "/airports"
                          },
                          {
                            "backend": [
                              {
                                "service_name": "air103-service",
                                "service_port": "8080"
                              }
                            ],
                            "path": "/airports/"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress",
      "name": "countries_ingress",
      "provider": "provider.kubernetes",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "country/countries-ingress",
            "load_balancer_ingress": [],
            "metadata": [
              {
                "annotations": {
                  "nginx.ingress.kubernetes.io/rewrite-target": "/"
                },
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "countries-ingress",
                "namespace": "country",
                "resource_version": "15498",
                "self_link": "/apis/extensions/v1beta1/namespaces/country/ingresses/countries-ingress",
                "uid": "69076285-87c7-440d-a314-c7e5898e5bad"
              }
            ],
            "spec": [
              {
                "backend": [],
                "rule": [
                  {
                    "host": "air-country.lunatest.nl",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "service_name": "country102-service",
                                "service_port": "8080"
                              }
                            ],
                            "path": "/countries"
                          },
                          {
                            "backend": [
                              {
                                "service_name": "country102-service",
                                "service_port": "8080"
                              }
                            ],
                            "path": "/countries/"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "air",
      "provider": "provider.kubernetes",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "air",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "label": "air"
                },
                "name": "air",
                "resource_version": "15494",
                "self_link": "/api/v1/namespaces/air",
                "uid": "5e22a671-f1d5-4bc3-8dec-8f7c0933df9c"
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "country",
      "provider": "provider.kubernetes",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "country",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "label": "country"
                },
                "name": "country",
                "resource_version": "15492",
                "self_link": "/api/v1/namespaces/country",
                "uid": "dc46c541-83c9-4202-bb6c-6f7d913e384e"
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "air_default_deny_all",
      "provider": "provider.kubernetes",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "air/air-default-deny-all",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "air-default-deny-all",
                "namespace": "air",
                "resource_version": "15501",
                "self_link": "/apis/networking.k8s.io/v1/namespaces/air/networkpolicies/air-default-deny-all",
                "uid": "ff69ed1f-a028-4175-9d86-5220ee6361b2"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "air_permit_network_policy",
      "provider": "provider.kubernetes",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "air/air-permit-network-policy",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "air-permit-network-policy",
                "namespace": "air",
                "resource_version": "15514",
                "self_link": "/apis/networking.k8s.io/v1/namespaces/air/networkpolicies/air-permit-network-policy",
                "uid": "163e6c06-e417-4155-9bf0-fe9424269172"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "label": "air"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ],
                    "ports": [
                      {
                        "port": "8080",
                        "protocol": "TCP"
                      }
                    ]
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "country_default_deny_all",
      "provider": "provider.kubernetes",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "country/country-default-deny-all",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "country-default-deny-all",
                "namespace": "country",
                "resource_version": "15499",
                "self_link": "/apis/networking.k8s.io/v1/namespaces/country/networkpolicies/country-default-deny-all",
                "uid": "cb6162d1-e154-49b5-bc2f-994b949bb36e"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "country_permit_network_policy",
      "provider": "provider.kubernetes",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "country/country-permit-network-policy",
            "metadata": [
              {
                "annotations": null,
                "generate_name": "",
                "generation": 1,
                "labels": null,
                "name": "country-permit-network-policy",
                "namespace": "country",
                "resource_version": "15504",
                "self_link": "/apis/networking.k8s.io/v1/namespaces/country/networkpolicies/country-permit-network-policy",
                "uid": "5c794477-2fee-41f7-88e8-61feea02d2b4"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": {
                              "label": "country"
                            }
                          }
                        ],
                        "pod_selector": []
                      }
                    ],
                    "ports": [
                      {
                        "port": "8080",
                        "protocol": "TCP"
                      }
                    ]
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress"
                ]
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "air_103_service",
      "provider": "provider.kubernetes",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "air/air103-service",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "run": "air103"
                },
                "name": "air103-service",
                "namespace": "air",
                "resource_version": "15516",
                "self_link": "/api/v1/namespaces/air/services/air103-service",
                "uid": "cd4bd12f-22c7-4d17-aec1-d107525ca57b"
              }
            ],
            "spec": [
              {
                "cluster_ip": "10.96.136.176",
                "port": [
                  {
                    "node_port": 0,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "run": "air103"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "country_102_service",
      "provider": "provider.kubernetes",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "country/country102-service",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "run": "country102"
                },
                "name": "country102-service",
                "namespace": "country",
                "resource_version": "15509",
                "self_link": "/api/v1/namespaces/country/services/country102-service",
                "uid": "f147bac9-296c-4d71-bc3d-7e67d420fa6c"
              }
            ],
            "spec": [
              {
                "cluster_ip": "10.96.81.180",
                "port": [
                  {
                    "node_port": 0,
                    "port": 8080,
                    "protocol": "TCP",
                    "target_port": "8080"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "run": "country102"
                },
                "session_affinity": "None",
                "type": "ClusterIP"
              }
            ]
          }
        }
      ]
    }
  ]
}